@@ -1,3 +1,7 @@
+Sat Feb  5 23:32:54 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* enc/encdb.c (InitVM_encdb): MVM ready.
+
 Sat Feb  5 22:44:29 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* intervm.c: support for ruby floats; they are fairly flat, having
